fix: input selection auto zoom on mobile web

--- a/src/ant-custom.less
+++ b/src/ant-custom.less
@@ -71,3 +71,11 @@ body {
     }
   }
 }
+
+@media screen and (max-width: 767px) {
+  input,
+  select,
+  textarea {
+    font-size: 16px;
+  }
+}
